--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
+  width: 100vw;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -22,6 +23,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100vw;
 }
 
 .App-link {
